force-app/main/default/objects/FinancialItem__c/FinancialItem__c.object-meta.xml
<CustomObject>
    <label>Financial Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>