force-app/main/default/objects/FinancialItem__c/fields/overallCost__c.field-meta.xml
<CustomField>
    <fullName>overallCost__c</fullName>
    <formula>totalContributions__c - totalDeductions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>