force-app/main/default/objects/FinancialItem__c/fields/plannerMD__c.field-meta.xml
<CustomField>
    <fullName>plannerMD__c</fullName>
    <label>Planner</label>
    <referenceTo>Planner__c</referenceTo>
    <relationshipLabel>Financial Items</relationshipLabel>
    <relationshipName>financialItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>