force-app/main/default/objects/FinancialItem__c/fields/totalContributions__c.field-meta.xml
<CustomField>
    <fullName>totalContributions__c</fullName>
    <label>Total Contributions</label>
    <summarizedField>Contribution__c.cost__c</summarizedField>
    <summaryForeignKey>Contribution__c.financialItemMD__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>