force-app/main/default/objects/FinancialItem__c/fields/totalDeductions__c.field-meta.xml
<CustomField>
    <fullName>totalDeductions__c</fullName>
    <label>Total Deductions</label>
    <summarizedField>Deduction__c.cost__c</summarizedField>
    <summaryForeignKey>Deduction__c.financialItemMD__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>