force-app/main/default/objects/FinancialItem__c/listViews/jordanLilleyDeductions.listView-meta.xml
<ListView>
    <fullName>jordanLilleyDeductions</fullName>
    <columns>NAME</columns>
    <columns>overallCost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>plannerMD__c</field>
        <operation>equals</operation>
        <value>Monthly Budget - Jordan Lilley</value>
    </filters>
    <filters>
        <field>type__c</field>
        <operation>equals</operation>
        <value>Deduction</value>
    </filters>
    <label>Jordan Lilley - Deductions</label>
</ListView>